2000-04-05  Ken Raeburn  <raeburn@gnu.org>

	* dispnew.c (allocate_matrices_for_frame_redisplay,
	direct_output_forward_char): Use X(U)INT and make_number as needed
	to convert between (unsigned) int values and lisp integers.
	* keyboard.c (read_key_sequence): Likewise.
	* lread.c (substitute_object_recurse): Likewise.
	* fns.c (concat, hash_lookup, hash_remove): Likewise.
	* minibuf.c (do_completion, Fminibuffer_complete_word,
	Fminibuffer_completion_help): Likewise.
	* term.c (produce_special_glyphs): Likewise.

	* fileio.c (Fwrite_region): Use EQ when comparing lisp objects.
	* print.c (print_preprocess, print_object): Likewise.

	* search.c (compile_pattern): Use NILP when checking for nil.

	* lisp.h (make_number) [!NO_UNION_TYPE && __GNUC__ >= 2 &&
	__OPTIMIZE__]: Provide a GNU C macro version that handles
	lisp-object unions.
	(XSET) [!NO_UNION_TYPE]: Set the value field first, then the type
	field, to better cope with ENABLE_CHECKING and calls that modify a
	Lisp_Object using its old value.

2000-04-04  Gerd Moellmann  <gerd@gnu.org>

	* window.c (compare_window_configurations): Signal an error
	if parameters C1 or C2 aren't window configurations.

	* bytecode.c (Fbyte_code): Add a bunch of BEFORE_POTENTIAL_GC/
	AFTER_POTENTIAL_GC calls around calls to functions that can
	signal an error and thus invoke the debugger.

2000-04-03  Gerd Moellmann  <gerd@gnu.org>

	* fns.c (Fbase64_decode_region, Fbase64_decode_string): Signal
	an error if decoding fails.

	* keyboard.c (lispy_mouse_names): Variable removed.
	(Vlispy_mouse_stem): New variable.
	(syms_of_keyboard): Initialize Vlispy_mouse_stem.
	(make_lispy_event) <mouse_click, scroll_bar_click>: Don't abort
	for any mouse button number.  Increase size of mouse_syms and
	button_down_location as needed.  Call modify_event_symbol with
	different arguments.
	(make_lispy_event) <scroll_bar_click> [USE_TOOLKIT_SCROLL_BARS]:
	Call modify_event_symbol with different arguments.